# IPC

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  mainpage.h
examples/: minimal-message-client.cpp  minimal-message-server.cpp  simple-message-client.cpp  simple-message-server.cpp  simple-rpc-client.cpp  simple-rpc-common.hpp  simple-rpc-server.cpp
include/: alpc.h  ipc.h  ipc.hpp  rpc.h  rpc.hpp
source/: ipc.cpp  ipc_impl.h  ipc_impl.hpp  rpc_impl.h  rpc_impl.hpp
tests/: test-message.cpp
